# iobus

./: .gitignore  README.md  iobus.command  pyproject.toml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/iobus/client/: MainActivity.kt
android/app/src/main/java/com/iobus/client/input/: KeyProcessor.kt  TouchProcessor.kt
android/app/src/main/java/com/iobus/client/network/: ConnectionManager.kt  ConnectionState.kt  SavedServersStore.kt  TcpClient.kt  UdpClient.kt
android/app/src/main/java/com/iobus/client/protocol/: Constants.kt  KeyCodes.kt  Messages.kt
android/app/src/main/res/drawable/: ic_combined.xml  ic_control_center.xml  ic_home.xml  ic_keyboard.xml  ic_layout_grid.xml  ic_lock.xml  ic_mic.xml  ic_moon.xml  ic_pause.xml  ic_play.xml  ic_power.xml  ic_rotate_ccw.xml  ic_search.xml  ic_skip_back.xml  ic_skip_forward.xml  ic_sun.xml  ic_sun_dim.xml  ic_touchpad.xml  ic_unplug.xml  ic_volume_1.xml  ic_volume_2.xml  ic_volume_x.xml  ic_zap.xml
android/app/src/main/res/values/: strings.xml  themes.xml
notes/: 001-architecture.md  002-decisions.md  003-protocol-design.md  004-components.md  005-python-setup.md
protocol/: __init__.py  constants.py  keycodes.py  messages.py
server/: __init__.py  __main__.py  config.py  discovery.py  main.py  permissions.py  requirements.txt
server/input/: __init__.py  actions.py  keyboard.py  mouse.py
server/transport/: __init__.py  tcp_server.py  udp_server.py
(+16 files in other folders)
